core/colorspace: ensure that we don't create elevated blacks with black point compensation

There are cases where the minimum luminance can be lower than the transfer function's minimum; in those
cases, the transfer function's minimum would get mapped to a value greater than black in the target
transfer function. To avoid that, this just takes the max. of the metadata and transfer function minimum

BUG: 494854
(cherry picked from commit cef6656ff57e19e7eb551f81ee5b03028a7f38a9)